--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -49,11 +49,8 @@ RUN chmod +x /usr/local/bin/dind-entrypoint.sh
 # Set working directory
 WORKDIR /home/pod-user
 
-# DO NOT switch user before entrypoint
-# USER pod-user
-
-# Set the entrypoint (will run as root)
+# Set the entrypoint (will run as root by default now)
 ENTRYPOINT ["/usr/local/bin/dind-entrypoint.sh"]
 
-# Default command (will be passed to the entrypoint, executed as pod-user)
+# Default command (will be passed to the entrypoint, executed as pod-user via gosu)
 CMD ["/bin/bash"] 
